tests/bad/null_const.glaz
const CONST_X: *i32 = null;

fn main() { }
